Implemented access tokens to grant long-lived user sessions to technical services
