# services/api-gateway/src/services/identity/index.ts
@@ -15,11 +15,18 @@ import {
   sendAccountValidationLink,
 } from './users';
 import { setupUserMFA, validateMFA } from './mfa';
-import { OTPKey, User } from './types';
+import {
+  createAccessToken,
+  listAccessTokens,
+  deleteAccessToken,
+  validateAccessToken,
+} from './accessTokens';
+import { OTPKey, User, AccessToken } from './types';
 export * from './types';
 
 const Users = buildStorage<User>('Users', storage.Users);
 const OTPKeys = buildStorage<OTPKey>('OTPKeys', storage.Users);
+const AccessTokens = buildStorage<AccessToken>('AccessTokens', storage.Users);
 
 export default (ctx?: PrismeContext, logger?: Logger) => {
   return {
@@ -33,7 +40,13 @@ export default (ctx?: PrismeContext, logger?: Logger) => {
     resetPassword: resetPassword(Users, ctx, logger),
     validateAccount: validateAccount(Users, ctx, logger),
     sendAccountValidationLink: sendAccountValidationLink(Users, ctx, logger),
+
     setupUserMFA: setupUserMFA(OTPKeys, ctx, logger),
     validateMFA: validateMFA(OTPKeys),
+
+    createAccessToken: createAccessToken(AccessTokens),
+    listAccessTokens: listAccessTokens(AccessTokens),
+    deleteAccessToken: deleteAccessToken(AccessTokens),
+    validateAccessToken: validateAccessToken(AccessTokens),
   };
 };
